--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sentry-auto-fix",
   "displayName": "Sentry Auto Fix",
   "description": "View Sentry issues in Cursor/VSCode and generate AI-powered fix prompts with full context",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "rseyferth",
   "repository": {
     "type": "git",
@@ -53,6 +53,41 @@
           },
           "default": [],
           "description": "Array of project slugs to monitor (format: 'organization/project')"
+        },
+        "sentryAutoFix.clickupApiToken": {
+          "type": "string",
+          "default": "",
+          "description": "ClickUp API token for integration (optional)"
+        },
+        "sentryAutoFix.clickupTeamId": {
+          "type": "string",
+          "default": "",
+          "description": "ClickUp team ID for integration (optional)"
+        },
+        "sentryAutoFix.clickupCustomFields": {
+          "type": "object",
+          "default": {},
+          "description": "Custom fields to add to ClickUp tasks (e.g., {\"Type\": \"Bug\"})"
+        },
+        "sentryAutoFix.clickupSelectedList": {
+          "type": "string",
+          "default": "",
+          "description": "Selected ClickUp list ID"
+        },
+        "sentryAutoFix.clickupCompletedStatus": {
+          "type": "string",
+          "default": "complete",
+          "description": "Status name to use when marking ClickUp tasks as completed"
+        },
+        "sentryAutoFix.clickupLanguage": {
+          "type": "string",
+          "default": "English",
+          "description": "Language for ClickUp comments (e.g., 'English', 'Dutch')"
+        },
+        "sentryAutoFix.customPromptInstructions": {
+          "type": "string",
+          "default": "",
+          "description": "Custom instructions to add to the AI fix prompt (optional)"
         }
       }
     },
@@ -69,7 +104,7 @@
       "sentry-issues": [
         {
           "id": "sentryIssuesView",
-          "name": "Issues",
+          "name": "Sentry Issues",
           "type": "webview"
         }
       ]
@@ -87,10 +122,21 @@
       {
         "command": "sentryAutoFix.openIssueInBrowser",
         "title": "Open Issue in Sentry"
+      },
+      {
+        "command": "sentryAutoFix.openSettings",
+        "title": "Open Settings",
+        "icon": "$(settings-gear)"
       }
     ],
     "menus": {
       "view/title": [
+        {
+          "command": "sentryAutoFix.openSettings",
+          "when": "view == sentryIssuesView",
+          "group": "navigation",
+          "icon": "$(settings-gear)"
+        },
         {
           "command": "sentryAutoFix.refreshIssues",
           "when": "view == sentryIssuesView",
@@ -117,15 +163,23 @@
   },
   "devDependencies": {
     "@types/node": "^20.x",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.x",
     "@typescript-eslint/parser": "^6.x",
     "esbuild": "^0.19.0",
     "eslint": "^8.x",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
     "typescript": "^5.3.0"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^0.5.0",
     "axios": "^1.6.0",
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "unified": "^11.0.5",
+    "zustand": "^4.5.7"
   }
 }
